--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,36 +17,32 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+
+// Typography Styles
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
+// Background Gradient
 .navbar, .home-callout {
-  //gradient provided by @_ighosh at uiGradients.com
+  // Gradient provided by @_ighosh at uiGradients.com
   background: #70e1f5; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #70e1f5 , #ffd194); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #70e1f5 , #ffd194); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   
 }
 
-.navbar-default .navbar-brand {
-  color: black;
-}
-
+// Nav Styles
+.navbar-default .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
   color: black;
+  &:hover {
+    color: white;
+    opacity: 0.80;
+  }
 }
 
-.navbar-default .navbar-brand:hover {
-  color: white;
-  opacity: 0.80;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
-  opacity: 0.80;
-}
-
+// Home Page Styles
 .home-callout {
   color: black;
   margin-top: -20px;
