--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,15 @@ h1, h2, h3 {
   }
 }
 
+.navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+}
+
+.navbar {
+  border: none;
+}
+
 // Home Page Styles
 .home-callout {
   color: black;
@@ -52,6 +61,3 @@ h1, h2, h3 {
   padding-bottom: 100px;
 }
 
-.navbar {
-  border: none;
-}
