--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,15 +2,16 @@
   <h3 class="text-center">Contact us</h3>
   
   <%= form_for "/contacts" do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    
-    <%= f.label :comments %>
-    <%= f.text_area :comments %>
-    
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+      
+      <%= f.label :comments %>
+      <%= f.text_area :comments %>
+
     <%= f.submit 'Submit' %>
   <% end %>
 </div>
