--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body>
-        <p>You have revieved a message frmo the sites contact form, from
+        <p>You have revieved a message from the sites contact form, from
         <%= "#{ @name }, #{ @email }." %></p>
         <p><%= @body %></p>
     </body>
